# cs5600_hw1

./: CMakeLists.txt  README.md  alu.c  assignment_1  assignment_1_test.c  libcunit.dylib
